--- a/pages/tmall_home_img.html
+++ b/pages/tmall_home_img.html
@@ -201,7 +201,7 @@
 
         $('.area-item').removeClass('current')
         $('.area-item[area-id="'+id+'"]').addClass('current');
-        $('.area-item[area-id="'+id+'"]').find('input').focus();
+        // $('.area-item[area-id="'+id+'"]').find('input').focus();
     }
 
     /**
