--- a/pages/math_practice.html
+++ b/pages/math_practice.html
@@ -36,7 +36,7 @@
 <body>
 
 <div class="container">
-    <div class="row">
+    <div class="row" id="question_paper">
         <div class="col-md-4">
             <div class="qcol" id="question_column_01">
                 <div class="q-block">
