--- a/pages/math_practice.html
+++ b/pages/math_practice.html
@@ -110,16 +110,16 @@
        // $('#answer_paper').hide();
 
        qM = new j79EduQuestionWeaver({
-               questionDataURL: 'settings/questionData1.json',
+               questionDataURL: 'settings/questionData4.json',
                questionAmount: 9,
                columnAmount:3,
                questionContainer:'#question_paper',
                answerContainer: '#answer_paper'
             });
        qM.generate({
-           title: "函数基础（单调性，奇偶性）",
+           title: "指数基础 1-2",
            difficultyLevel: 0,
-           knowledgeCode: 'kp001001'
+           knowledgeCode: 'kp001010001'
        })
     });
 </script>
