--- a/pages/LinkGenTB.html
+++ b/pages/LinkGenTB.html
@@ -55,6 +55,25 @@
 579004789780
     ]
 
+    let linkDataTB=[
+        537118240823,
+        535001174068,
+        535001414554,
+        533277482902,
+        533277470087,
+        533277614282,
+        533305169923,
+        533309801222,
+        533339012269,
+        533307761041,
+        533222423680,
+        634971107710,
+        633976412510,
+        634652474977,
+        536968885019,
+        536858839164
+    ]
+
     let linkInfo = [
         '白金3段-直邮',
         '白金3段-保税',
@@ -78,7 +97,28 @@
         '深度2段-直邮',
         '爱他美半水解-保税',
         '爱他美半水解-直邮'
+    ];
+    let linkInfoTB = [
+        '白金3段-直邮',
+        '白金1段-直邮',
+        '白金2段-直邮',
+        '爱他美3段-直邮',
+        '爱他美1段-直邮',
+        '爱他美2段-直邮',
+        '爱他美4段-直邮',
+        '牛栏3段-直邮',
+        '牛栏1段-直邮',
+        '牛栏2段-直邮',
+        '牛栏4段-直邮',
+        '有机版2段-直邮',
+        '有机版1段-直邮',
+        '有机版3段-直邮',
+        '深度2段-直邮',
+        '爱他美半水解-直邮'
     ]
+
+    // linkData = linkDataTB
+    // linkInfo = linkInfoTB
 
     let i=0
     let curType =0
@@ -101,6 +141,8 @@
             '//item.taobao.com/item.htm?id=',
             '//h5.m.taobao.com/awp/core/detail.htm?id='
         ]
+
+
 
         copy(linkPre[curType]+linkData[i])
 
