--- a/pages/tmall_home_img.html
+++ b/pages/tmall_home_img.html
@@ -110,6 +110,14 @@
                     <div class="col-sm-10">
                         <input class="form-control"  type="text" id="blankImgUrl" value="https://img.alicdn.com/imgextra/i4/1969925202/O1CN01aQM7vQ1oIYx9d6GBw_!!1969925202.png"/>
                     </div>
+                    <div class="col-md-offset-2 col-sm-10">
+                        <b>tmall:</b>
+                        <span>https://img.alicdn.com/imgextra/i4/1969925202/O1CN01aQM7vQ1oIYx9d6GBw_!!1969925202.png</span>
+                    </div>
+                    <div class="col-md-offset-2 col-sm-10">
+                        <b>taobao:</b>
+                        <span>https://gdp.alicdn.com/imgextra/i1/2902293399/O1CN01nG3pDi1aymrv1S9gc_!!2902293399.png</span>
+                    </div>
                 </div>
                 <HR/>
                 <div class="form-group">
